--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -8,60 +8,47 @@
 \usepackage{linespacing_fix} % disable extra space before next section
 \usepackage{cite}
 
+
+\usepackage[linkcolor=black,colorlinks,urlcolor=blue
+            ]{hyperref}
+
+
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{江涛}
+\name{黄灿铭}
 
 % {E-mail}{mobilephone}{homepage}
 % be careful of _ in emaill address
-\contactInfo{(+86) 132-6029-9910}{hijiangtao@gmail.com}{Web前端研发工程师}{GitHub @hijiangtao}
+\contactInfo{(+86) 189-5977-6498 }{huangzzk@bupt.edu.cn}{}{}
 % {E-mail}{mobilephone}
 % keep the last empty braces!
 %\contactInfo{xxx@yuanbin.me}{(+86) 131-221-87xxx}{}
  
-\section{个人总结}
-本人在校成绩优秀、乐观向上，工作负责、自我驱动力强、热爱尝试新事物，认同开放、连接、共享的Web在未来的不可替代性。在校期间长期从事可视分析(Web的2D/3D时空可视化)相关研究，对Web技术发展趋势及前端工程化解决方案有浓厚兴趣。\textbf{现任职于阿里巴巴集团。}
-
 % \section{\faGraduationCap\ 教育背景}
+
 \section{教育背景}
-\datedsubsection{\textbf{中国科学院大学},计算机应用技术,\textit{在读硕士研究生}}{2015.9 - 2018.6}
-\ \textbf{排名11/133(前10\%)},中国科学院大学学业奖学金(2次),IEEE Student member,预计2018年6月毕业
-\datedsubsection{\textbf{北京理工大学},软件工程,\textit{工学学士}}{2011.9 - 2015.6}
-\ \textbf{排名2/62(前5\%)},国家励志奖学金,人民奖学金(7次),科技竞赛奖(2次),北京市普通高等学校优秀毕业生,北京理工大学优秀毕业生,软件学院金牌毕业生,优秀团员/优秀学生(5次)
-\datedsubsection{\textbf{荷兰 莱顿大学},计算机科学与技术,\textit{国家留学基金委公派交换生}}{2015.3 - 2015.5}
-\ 2014年中国政府奖学金(\textit{http://www.csc.edu.cn/}),DID-ACTE项目交换生(\textit{http://did-acte.org/})
+\datedsubsection{\textbf{北京邮电大学},物流工程,\textit{在读硕士研究生}}{2018.9 - 2021.6}
 
-% \section{\faCogs\ IT 技能}
-\section{技术能力}
-% increase linespacing [parsep=0.5ex]
-\begin{itemize}[parsep=0.2ex]
-  \item \textbf{编程语言}: JavaScript (ECMAScript, Node.js), HTML/CSS, Python, Go, SQL, C, Shell
-  \item \textbf{操作系统,数据库与工程构建}: Linux/macOS/MySQL/MongoDB/Git/webpack/Progressive Web App
-  \item \textbf{关键词}: React/Vue.js/D3.js(SVG)/three.js(canvas, WebGL)/chrome extension/Express
-\end{itemize}
+\datedsubsection{\textbf{北京邮电大学},自动化,\textit{工学学士}}{2014.9 - 2018.6}
+\datedsubsection{\textbf{日本电气通信大学},智能机械,\textit{JUSST项目交换生}}{2019.10 - 2020.8}
 
-% \end{itemize}
-
+\vspace{1ex}
 \section{实习经历}
-\datedsubsection{\textbf{阿里巴巴集团 | Alibaba}, 前端开发工程师}{2017.6-2017.9}
+\datedsubsection{\textbf{Momenta}, 嵌入式研发实习生}{2019.7-2019.9}
 \begin{itemize}
-%   \item 飞猪北京前端团队全面负责各交通线的票务(机票/火车票/汽车票) web 应用与事业群基础架构研发
-  \item 独立负责车站地图开发(React),通过HTML5 本地存储及JSBridge实现在阿里全系应用中发布上线
-  \item 独立负责BU SPM chrome插件开发,支付成功/订单详情等页面的开发与交叉营销的接入工作
+  \item 独立负责\textbf{卷帘快门相机曝光中心点量测工具}的开发。由于卷帘快门相机采用逐行曝光，
+  该工具可以在不同相机配置参数下，测量整张图片中心点曝光时刻与Vsync信号产生时刻的实际时间差，用于对该图片时间戳的标定。
 \end{itemize}
 
-\datedsubsection{\textbf{北京腾云天下科技有限公司 | TalkingData},数据挖掘与可视化工程师}{2015.11-2017.5}
+\datedsubsection{\textbf{中国科学院自动化所}}{2019.3-2019.7}
 \begin{itemize}
-  \item \textbf{利用海量用户定位数据，对城市空间及人群移动特征进行研究。}第一个课题是基于香农熵和人群出行模式，构建城市网格与用户矩阵分析城市多样性/流动性分布；可视分析平台前端与可视化基于D3/Vue/Express开发，数据分析与存储采用Python/MySQL/MongoDB技术，为了均衡大数据情况下的页面可视化渲染消耗用canvas替代svg。第二个课题是对海量商场定位数据做人群分类与可视化查询，依据该系统撰写的论文被CIKM 2016(DAVA Workshop)录用，并收录于中科院软件所年会成果集
-  \item 负责数据科学部HQ LAB的可视化原型开发，主导 TalkingMind 平台系统设计与前端开发
+  \item \textbf{基于Ardopilot的飞行器/智能车编队控制系统} : 依据Ardopilot开源飞控作为主控制器实现的一个多飞行器、智能小车编队控制系统，
+  配合相应的地面站 可方便地进行任务分配及目的地规划。
+  \item 负责 UWB 定位数据的导入与 EKF 融合 
+  \item 负责 Ardopillot 下新模块底层驱动的编写 
 \end{itemize}
 
-\datedsubsection{\textbf{北京格灵深瞳信息技术有限公司 | DeepGlint},Web开发工程师}{2015.7-2015.9}
-\begin{itemize}
-  \item \textbf{独立负责MUSE部门的可视化组件研发。}与平台研发、设计协作完成 DeepGlint Developer 平台可视化图表组件的集成开发，符合完全定制化渲染、响应式布局与实时更新等特点
-  \item 利用 D3+Vue+WebGL(Three.js) 尝试实现三维空间的人群移动可视化
-\end{itemize}
 
 % \begin{onehalfspacing}
 % \end{onehalfspacing}
@@ -79,16 +66,29 @@
 
 \section{竞赛获奖/项目作品}
 % increase linespacing [parsep=0.5ex]
-\begin{itemize}[parsep=0.2ex]
-%   \item LeetCodeOJ Solutions, \textit{https://github.com/hijiangtao/LeetCodeOJ}
-  \item 第三届中国软件杯大学生软件设计大赛\textbf{全国一等奖}( \textit{http://www.cnsoftbei.com/} ),2014 年8月
-  \item 中国机器人大赛创意设计大赛\textbf{全国特等奖}( \textit{http://www.rcccaa.org/} ),2013年8月
-%   \item 中国机器人大赛暨Robocup公开赛(武术擂台赛)全国一等奖,2013年10月
-  \item 第11届北京理工大学“世纪杯”竞赛学生课外科技作品竞赛\textbf{特等奖},2013年8月
-  \item VIS Components for security system, \textit{https://hijiangtao.github.io/ss-vis-component/}
-  \item 个人博客：\textit{https://hijiangtao.github.io/}，更多作品见 \textit{https://github.com/hijiangtao}
-%   \item 电视节目"爸爸去哪儿"可视化分析展示, \textit{https://hijiangtao.github.io/variety-show-hot-spot-vis/}
+\datedsubsection{\textbf{第十六届全国大学生机器人大赛|ABURobocon} \textbf{全国一等奖}}{2016.10-2017.6}
+\textit{当届竞赛主题：舞盘雅乐，参赛队设计并制作机器人装载并发射飞盘，以精度及稳定性论胜负。}
+
+\begin{itemize}
+  \item 负责机器人整体电气结构搭建与维护
+  \item 负责底层模块如电机驱动器等模块的设计及代码编写 
 \end{itemize}
+
+\datedsubsection{\textbf{第九届北京市挑战杯|扑翼式无人机} \textbf{特等奖}}{2016.6-2017.6}
+\textit{微型扑翼式无人飞行器，使用锂电池作为能源，微型空心杯电机为动力，起飞重量仅有13g。}
+
+\begin{itemize}
+  \item 负责硬件设计及控制算法的编写 
+\end{itemize}
+
+
+\datedsubsection{\textbf{第十一届飞思卡尔智能汽车竞赛|电磁直立组} \textbf{全国二等奖}}{2015.10-2016.8}
+
+\textit{智能车需识别埋在赛道中央通有一定频率的交变电流的引导线，在运行过程中，仅能以两轮行进的方式 进行前进。 }
+\begin{itemize}
+  \item 负责传感器数据融合及姿态解算  
+\end{itemize}
+
 
 % \section{\faHeartO\ 项目/作品摘要}
 % \section{项目/作品摘要}
@@ -99,16 +99,34 @@
 % \datedline{\textit{Info-Vis}, https://github.com/ISCAS-VIS/infovis-ucas}{}
 
 
-% \section{\faInfo\ 社会实践/其他}
-\section{社区参与/实践其他}
+
+
+% \section{\faCogs\ IT 技能}
+\section{技术能力}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.2ex]
-  \item 乐于参与开源社区讨论,\textbf{参与翻译 Vue.js, webpack, WebAssembly, Babel 文档，印记中文成员}
-  \item 中国科学院大学2016秋季学期可视化与可视分析课程助教，\textit{http://vis.ios.ac.cn/infovis-ucas/}
-  \item 未来论坛学生会成员、北理社联新闻信息中心主任、北理工软件学院学生会宣传部副部长(2012-2016)
-  \item 2013-2015 北京市共青团“温暖衣冬”志愿者,第九届园博会志愿者,2014 FLL机器人世锦赛志愿者
+  \item \textbf{英语能力} CET-4:543CET-6:478 
+  \item \textbf{编程语言} C,Python,Scala,Verilog 
+  \item \textbf{电路设计} PCBLayout
+  \item \textbf{嵌入式微控制器} ARM CortexM4/M3/M0
+  \item \textbf{其他} Linux,SQL,Matlab,FPGA/CPLD
+  
+ 
 \end{itemize}
 
+\section{个人页面}
+% increase linespacing [parsep=0.5ex]
+\begin{itemize}[parsep=0.2ex]
+  \item \textbf{博客} \url{https://github.com/Ncerzzk/MyBlog}
+  \item \textbf{Github} \url{https://github.com/Ncerzzk}
+\end{itemize}
+
+\section{个人总结}
+% increase linespacing [parsep=0.5ex]
+我对飞行器、机器人及嵌入式底层等方向很感兴趣，在学生时代接触并实际参与了不少相关的竞赛和项目， 取得了一定的成绩。
+
+
+% \end{itemize}
 %% Reference
 %\newpage
 %\bibliographystyle{IEEETran}
